fix(scrollbars): remove scrollbar styles

--- a/src/components/code/code.scss
+++ b/src/components/code/code.scss
@@ -40,23 +40,6 @@ pre[class*="language-"] {
   overflow: auto;
   flex-grow: 1;
 //   height: 100%;
-
-  &::-webkit-scrollbar {
-    width: 1em;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border-radius: 0.5em;
-    background-color: transparent;
-  }
-
-  &:hover::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.3);
-  }
 }
 
 :not(pre) > code[class*="language-"],
